--- a/app/Resources/views/layout/menu.html.twig
+++ b/app/Resources/views/layout/menu.html.twig
@@ -80,6 +80,14 @@
         </span>
     </li>
 </a>                
+<a href="{{path('admin_role_index')}}" class="leftnava">
+    <li class="leftnav left {% if menuRolesA is defined %}active {% endif %}">
+        {{menuRoles}}
+        <span class="pull-right right">
+            <i class="{% if menuRolesA is defined %}fa fa-arrow-right {% endif %}"></i>
+        </span>
+    </li>
+</a>                
 {#<a href="{{path('crmtipocaso_index')}}" class="leftnava">
     <li class="leftnav left {% if menuTipoCasoA is defined %}active {% endif %}">
         {{menuTipoCaso}}
