Seguimiento de oportunidad de venta

--- a/app/Resources/views/crm_oportunidad/new.html.twig
+++ b/app/Resources/views/crm_oportunidad/new.html.twig
@@ -9,6 +9,7 @@
                         <label class="hidden requiredFields">{{requiredFields}}</label>
                         <input id="txtId" type="hidden" name="txtId" class="input-sm form-control">
                         <input id="iteracion" type="hidden" name="iteracion" class="input-sm form-control">
+                        <input id="txtTipoComment" type="hidden" name="txtTipoComment" class="input-sm form-control" value="5">
                         <input id="txtName" type="text" name="txtName" class="input-sm form-control validateInput">
                     </div>
                     <div class="col-md-3 col-xs-4">
