--- a/app/Resources/views/dashboard/iconos_modulos.html.twig
+++ b/app/Resources/views/dashboard/iconos_modulos.html.twig
@@ -31,7 +31,7 @@
                 
     <!-- Inicio de Icono de Ventas -->
     <div class="col-md-2 col-xs-6 col-sm-2" style="margin-top: 20px;">
-        <a class="opcion" href="" style="text-decoration: none; color: inherit; outline: 0; margin-top: 20px;">
+        <a class="opcion" href="{{path('admin_quotes_index')}}" style="text-decoration: none; color: inherit; outline: 0; margin-top: 20px;">
             <span class="text-center">
                 <p style="margin-botttom: 0px; padding-bottom: 0px;"><img src="{{asset('Resources/src/img/icons/')}}/{{saleStageIcon}}" style="width:60%;"></p>
                 <p style="padding-top: 5px; margin-top: 0px;" ><strong>Sales</strong></p>
