--- a/app/Resources/views/crmcontacto/index_contacto.html.twig
+++ b/app/Resources/views/crmcontacto/index_contacto.html.twig
@@ -8,6 +8,7 @@
 {% block customcss %}
     <link rel="stylesheet" href="{{ asset('Resources/customscss/salestage.css') }}">
     <link rel="stylesheet" href="{{ asset('Resources/slider/css/bootstrap-slider.min.css') }}">
+    <link rel="stylesheet" href="{{ asset('Resources/customscss/timeline/timeline.css') }}">
     <style type="text/css">
         .errorform{
             border: 1px solid #F00 !important;
@@ -16,6 +17,7 @@
 {% endblock %}
 {% block navegacion %}
     {% include ':layout:menuventas.html.twig' %}
+    {% include ':crmcuenta:add_files.html.twig' %}
 {% endblock %}
 
 {% block descripcion %}
@@ -24,12 +26,13 @@
         <p class="robo" style="font-weight: 300; font-size: 14px; ">{{descripcionContacto}}</p>
         {# <p id="cancelLabel" class="robo hidden" style="font-weight: 300; font-size: 14px; ">{{cancelLabel}}</p> #}
         <p id="removeLabel" class="robo hidden" style="font-weight: 300; font-size: 14px; ">{{removeLabel}}</p>
-        <p id="convertLabel" class="robo hidden" style="font-weight: 300; font-size: 14px; ">{{convertLabel}}</p>
+        {#<p id="convertLabel" class="robo hidden" style="font-weight: 300; font-size: 14px; ">{{convertLabel}}</p>#}
+        <p id="removeFile" class="robo hidden" style="font-weight: 300; font-size: 14px; ">{{removeFile}}</p>
+        <p id="removedFile" class="robo hidden" style="font-weight: 300; font-size: 14px; ">{{removedFile}}</p>
         <p id="cancelButtonText" class="robo hidden" style="font-weight: 300; font-size: 14px; ">{{cancelButtonText}}</p>
         <p id="confirmButtonText" class="robo hidden" style="font-weight: 300; font-size: 14px; ">{{confirmButtonText}}</p>
         <p id="alternateconfirmButtonText" class="robo hidden" style="font-weight: 300; font-size: 14px; ">{{alternateconfirmButtonText}}</p>
     </div>
-
 {% endblock %}
 {% block acciones %}
     <div class="col-md-7 text-right panel-body">
@@ -75,6 +78,12 @@
     <script type="text/javascript" src="{{ asset('Resources/validations/validation.js') }}"></script>
     <script type="text/javascript" src="{{ asset('Resources/persist/contacto/contacto.js') }}"></script>
     <script type="text/javascript" src="{{ asset('Resources/animations/contacto/contacto.js') }}"></script>
+    <script type="text/javascript" src="{{ asset('Resources/bootstrap/js/moment.js') }}"></script>
+    <script type="text/javascript" src="{{ asset('Resources/persist/seguimiento/files.js') }}"></script>
+
+    <script type="text/javascript" src="{{ asset('Resources/persist/seguimiento/seguimiento.js') }}"></script>
+    <script type="text/javascript" src="{{ asset('Resources/persist/seguimiento/add-comment.js') }}"></script>
+    
     <script type="text/javascript">
         $(document).ready(function () {
             /////Definición datatable
