--- a/app/Resources/views/ctlproducto/index.html.twig
+++ b/app/Resources/views/ctlproducto/index.html.twig
@@ -1,51 +1,94 @@
-{% extends 'base.html.twig' %}
+{% extends ':layout:layouterp.html.twig' %}
 
-{% block body %}
-    <h1>Ctlproductos list</h1>
 
-    <table>
-        <thead>
-            <tr>
-                <th>Id</th>
-                <th>Nombre</th>
-                <th>Codigo</th>
-                <th>Costo</th>
-                <th>Precio</th>
-                <th>Fecaregistro</th>
-                <th>Descripcion</th>
-                <th>Estado</th>
-                <th>Actions</th>
-            </tr>
-        </thead>
-        <tbody>
-        {% for ctlProducto in ctlProductos %}
-            <tr>
-                <td><a href="{{ path('admin_ctlproduct_show', { 'id': ctlProducto.id }) }}">{{ ctlProducto.id }}</a></td>
-                <td>{{ ctlProducto.nombre }}</td>
-                <td>{{ ctlProducto.codigo }}</td>
-                <td>{{ ctlProducto.costo }}</td>
-                <td>{{ ctlProducto.precio }}</td>
-                <td>{% if ctlProducto.fecaRegistro %}{{ ctlProducto.fecaRegistro|date('Y-m-d H:i:s') }}{% endif %}</td>
-                <td>{{ ctlProducto.descripcion }}</td>
-                <td>{% if ctlProducto.estado %}Yes{% else %}No{% endif %}</td>
-                <td>
-                    <ul>
-                        <li>
-                            <a href="{{ path('admin_ctlproduct_show', { 'id': ctlProducto.id }) }}">show</a>
-                        </li>
-                        <li>
-                            <a href="{{ path('admin_ctlproduct_edit', { 'id': ctlProducto.id }) }}">edit</a>
-                        </li>
-                    </ul>
-                </td>
-            </tr>
-        {% endfor %}
-        </tbody>
-    </table>
+{% block title -%}<title>{{tituloCtlProducto}}</title>{% endblock %}
 
-    <ul>
-        <li>
-            <a href="{{ path('admin_ctlproduct_new') }}">Create a new ctlProducto</a>
-        </li>
-    </ul>
+{% block customcss %}
+    <link rel="stylesheet" href="{{ asset('Resources/customscss/salestage.css') }}">
+    <link rel="stylesheet" href="{{ asset('Resources/slider/css/bootstrap-slider.min.css') }}">
+{% endblock %}
+{% block descripcion %}
+     <div class="col-md-5">
+          <p class="robo" style="font-weight: 300; margin-bottom: 0px; font-size: 30px;">{{encabezadoCtlProducto | capitalize}}</p>
+          <p class="robo" style="font-weight: 300; font-size: 14px; ">{{descripcionCtlProducto}}</p>
+     </div>
+{% endblock %}
+{% block acciones %}
+     <div class="col-md-7 text-right panel-body">
+          <button data-loading-text="Loading..." autocomplete="off" class="btnAdd btn btn-sm btn-primary btn-flat">{{add}}</button>
+          <button class="hidden btnDelete btn btn-sm btn-danger btn-flat">{{delete}}</button>
+          <button class="hidden btnShow btn btn-sm btn-success btn-flat">{{show}}</button>
+          <button class="hidden btnAction btn btn-sm btn-default btn-flat">{{action}}</button>
+     </div>
+{% endblock acciones %}
+
+
+{% block contenido %}
+    <div class="row">
+        {% include ':ctlproducto:new.html.twig' %}
+
+        <div class="clearfix"></div>
+        <div class="col-md-12 col-xs-12">
+            <table id="campaignList" class="mdl-data-table dataTable" width="100%" cellspacing="0" style="text-align:left;">
+                  
+                <thead>
+                    <tr role="row">
+                        <th style="text-align:left;width: 20px;" colspan="1" rowspan="1"><input class="chkItemAll" type="checkbox" name=""></th>
+                        <th aria-label="Name: activate to sort column ascending" colspan="1" rowspan="1" aria-controls="example" tabindex="0" class="sortRecords mdl-data-table__cell--non-numeric sorting">{{nameProducto}}</th>
+                        {# <th aria-sort="descending" aria-label="Probability: activate to sort column ascending" colspan="1" rowspan="1" aria-controls="example" tabindex="0" class="mdl-data-table__cell--non-numeric sorting_desc">Probability</th> #}
+                        {# <th aria-label="State: activate to sort column ascending" colspan="1" rowspan="1" aria-controls="example" tabindex="0" >State</th> #}
+                        {# <th aria-label="Actions: activate to sort column ascending" style="width: 33px;" colspan="1" rowspan="1" aria-controls="example" tabindex="0" class="sorting">Actions</th> #}
+                    </tr>
+                </thead>      
+             </table>
+        </div>
+    </div>
+{% endblock %}
+
+
+{% block js_extend %}
+    <script type="text/javascript" src="{{ asset('Resources/animations/campaigntypes/campaigntypes.js') }}"></script>
+    <script type="text/javascript" src="{{ asset('Resources/validations/validation.js') }}"></script>
+    <script type="text/javascript" src="{{ asset('Resources/persist/campaigntypes/campaigntypes.js') }}"></script>
+    <script type="text/javascript">
+        $(document).ready(function() {
+            /////Definición datatable
+            var table = $('#campaignList').DataTable({
+                dom:'ftp',
+                "processing": false,
+                "serverSide": true,
+                "ajax": {
+                    "url": '{{path('admin_contact_data')}}',
+                    "type": 'GET'
+                },
+                "columns": [
+                    { "data": "chk" },
+                    { "data": "name" }
+                    // { "data": "probability" },
+                    // { "data": "state" }
+                    // { "data": "actions" }
+                ],
+                "order":[1,'asc'],
+                "columnDefs": [
+                    { "orderable": false, "targets": 0 }
+                    
+                ],
+                "language": {
+                    "info": "{{dtInfo}} _PAGE_ de _PAGES_",
+                    "infoEmpty": "{{dtInfoEmpty}}",
+                    "zeroRecords": "{{dtZeroRecords}}",
+                    "emptyTable": "{{dtEmptyTable}}",
+                    "paginate": { 
+                        "next": "{{dtNext}}",
+                        "previous": "{{dtPrev}}"
+                    },
+                    "processing": "{{dtProcessing}}",
+                    "search": "{{dtSearch}}",
+                    "lengthMenu": "{{dtLengthMenu}} _MENU_ registros"
+                }
+            });
+            /////Fin definición datatable
+        });
+    </script>
+     
 {% endblock %}
