--- a/app/Resources/views/ctlproducto/show.html.twig
+++ b/app/Resources/views/ctlproducto/show.html.twig
@@ -1,51 +1,31 @@
 {% extends 'base.html.twig' %}
 
 {% block body %}
-    <h1>Ctlproducto</h1>
+    <h1>CrmTipoCampania</h1>
 
     <table>
         <tbody>
             <tr>
                 <th>Id</th>
-                <td>{{ ctlProducto.id }}</td>
+                <td>{{ crmTipoCampanium.id }}</td>
             </tr>
             <tr>
                 <th>Nombre</th>
-                <td>{{ ctlProducto.nombre }}</td>
-            </tr>
-            <tr>
-                <th>Codigo</th>
-                <td>{{ ctlProducto.codigo }}</td>
-            </tr>
-            <tr>
-                <th>Costo</th>
-                <td>{{ ctlProducto.costo }}</td>
-            </tr>
-            <tr>
-                <th>Precio</th>
-                <td>{{ ctlProducto.precio }}</td>
-            </tr>
-            <tr>
-                <th>Fecaregistro</th>
-                <td>{% if ctlProducto.fecaRegistro %}{{ ctlProducto.fecaRegistro|date('Y-m-d H:i:s') }}{% endif %}</td>
-            </tr>
-            <tr>
-                <th>Descripcion</th>
-                <td>{{ ctlProducto.descripcion }}</td>
+                <td>{{ crmTipoCampanium.nombre }}</td>
             </tr>
             <tr>
                 <th>Estado</th>
-                <td>{% if ctlProducto.estado %}Yes{% else %}No{% endif %}</td>
+                <td>{% if crmTipoCampanium.estado %}Yes{% else %}No{% endif %}</td>
             </tr>
         </tbody>
     </table>
 
     <ul>
         <li>
-            <a href="{{ path('admin_ctlproduct_index') }}">Back to the list</a>
+            <a href="{{ path('admin_crmtipocampania_index') }}">Back to the list</a>
         </li>
         <li>
-            <a href="{{ path('admin_ctlproduct_edit', { 'id': ctlProducto.id }) }}">Edit</a>
+            <a href="{{ path('admin_crmtipocampania_edit', { 'id': crmTipoCampanium.id }) }}">Edit</a>
         </li>
         <li>
             {{ form_start(delete_form) }}
