--- a/app/Resources/views/crmcotizacion/new.html.twig
+++ b/app/Resources/views/crmcotizacion/new.html.twig
@@ -8,7 +8,7 @@
                     <div class="col-md-4 col-xs-12" style="margin-top: 10px;">
                         <label>{{userQuote}}</label>
                         <label class="hidden requiredFields">{{requiredFields}}</label>
-                        <input id="txtIdQuote" type="hidden" name="txtIdQuote" class="input-sm form-control">
+                        <input id="txtId" type="hidden" name="txtId" class="input-sm form-control">
                         <select id="assignedUserQuote" style="width:100%;" name="assignedUserQuote" class="input-sm form-control validateSelectQ dpbRespQute firstRespQuote">
                             <option value="0" selected>{{selectOption}}</option>
                             {% for persona in personas %}
